# lordstanley

./: .gitignore  Procfile  README.md  app.py  pyproject.toml  requirements.txt
config/: config.ini
data/: drafts.csv  season_schedule.csv  season_schedule_live_game.csv  standings.csv  teams.csv
data/drafts/: 20222023.csv  20232024.csv  20242025.csv
data/learning/: 2023020944.csv  2023020945.csv  2023020945.xlsx  2023020968.csv  2023020980.csv  overtime json.json  shootout_json.json
data/owners/: owners.csv
data/raw/: full_schedule.csv
data/schedules/: 20232024.csv  raw_schedule.csv
reference_data/drafts/: 20232024.csv  20242025.csv  20252026.csv  20252026.xlsx
src/: calculator.py  next_game.py  schedule_calculations.py  single_game_learning.py
src/backend/: new_team_added.py  nhl_api.py  read_config.py  schedule_etl.py  team_stats_calculator.py
src/lord_stanley/: app.py  config.py  constants.py  orchestrate.py
src/lord_stanley/domain/: assign_owners.py  constants.py  cup_possession.py  next_game.py  orchestrate.py  stats_calculator.py
src/lord_stanley/pipeline/: constants.py  extract.py  load.py  orchestrate.py  orhcestrate.py  transform.py
src/lord_stanley/web/: app.py  formatters.py
src/lord_stanley/web/templates/: index.html
src/nhl_api/: __init__.py  api.py  constants.py
static/: 20242025_schedule.csv  drafts.csv  seasons.csv  teams.csv
tests/: conftest.py  test_nhl_api.py
tests/data/game/: final_game_state.json  future_game_state.json  live_game_state_in_intermission.json  live_game_state_not_in_intermission.json  off_game_state.json
tests/lord_stanley/pipeline/: test_transform.py
